exports[`Components DailyEvents Changes the amount of displayed hours and the starting hour 1`] = `
<div
  className="DailyEvents">
  <div
    className="DailyEvents-list">
    <li
      className="DailyEvents-Hour">
      <time>
        09:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        10:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        11:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        12:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        13:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        14:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        15:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        16:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        17:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        18:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        19:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        20:00
      </time>
    </li>
  </div>
</div>
`;

exports[`Components DailyEvents Renders a scrollable list 1`] = `
<div
  className="DailyEvents">
  <div
    className="DailyEvents-list DailyEvents-list--is-scrollable">
    <li
      className="DailyEvents-Hour">
      <time>
        07:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        08:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        09:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        10:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        11:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        12:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        13:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        14:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        15:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        16:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        17:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        18:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        19:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        20:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        21:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        22:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        23:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        00:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        01:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        02:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        03:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        04:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        05:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        06:00
      </time>
    </li>
  </div>
</div>
`;

exports[`Components DailyEvents Renders with defaults 1`] = `
<div
  className="DailyEvents">
  <div
    className="DailyEvents-list">
    <li
      className="DailyEvents-Hour">
      <time>
        07:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        08:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        09:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        10:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        11:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        12:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        13:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        14:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        15:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        16:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        17:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        18:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        19:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        20:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        21:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        22:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        23:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        00:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        01:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        02:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        03:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        04:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        05:00
      </time>
    </li>
    <li
      className="DailyEvents-Hour">
      <time>
        06:00
      </time>
    </li>
  </div>
</div>
`;
